--- a/tours.html
+++ b/tours.html
@@ -78,7 +78,7 @@
         <h3>Book Your Tour</h3>
         
         <!-- Form (ready for email submission) -->
-        <form id="bookingFormForm" action="https://formspree.io/f/YOUR_FORM_ID" method="POST">
+        <form id="bookingFormForm" action="https://script.google.com/macros/s/AKfycbyNDtaFTDOBmMJoVjt-4ZNT8WAooi6OexXOS8NwlhyRqkMm9jh1Ccu0t4QV52xzaJKU/exec" method="POST">
             
             <label for="name">Full Name:</label>
             <input type="text" name="name" id="name" placeholder="Enter your full name" required>
@@ -115,5 +115,7 @@
 
     <!-- JS -->
     <script src="js/main.js"></script>
+    <script src="js/booking.js"></script>
 </body>
 </html>
+
