--- a/tours.html
+++ b/tours.html
@@ -111,11 +111,37 @@
         </form>
     </div>
 </div>
+<!-- Thank You Message -->
+<div id="thankYouMessage" 
+     style="display:none; 
+            position: fixed; 
+            top: 20px; 
+            left: 50%; 
+            transform: translateX(-50%);
+            background-color: #4caf50; 
+            color: #fff; 
+            padding: 20px 40px; 
+            border-radius: 8px; 
+            box-shadow: 0 4px 8px rgba(0,0,0,0.2); 
+            font-size: 18px; 
+            z-index: 1000;
+            text-align: center;">
+    🎉 Thank you! Your booking has been submitted successfully.
+</div>
+
+
+<div id="thankYouMessage" style="display:none;
+    position: fixed; top: 20px; left: 50%; transform: translateX(-50%);
+    background: #4caf50; color: #fff; padding: 20px 40px; border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0,0,0,0.2); font-size: 18px; z-index: 1000; text-align:center;">
+    🎉 Thank you! Your booking has been submitted successfully.
+</div>
+
+
 
 
     <!-- JS -->
-    <script src="js/main.js"></script>
     <script src="js/booking.js"></script>
+<script src="js/main.js"></script>
 </body>
 </html>
-
