--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <!-- Hero Section -->
     <section class="hero">
         <div class="hero-text">
-            <h1>Explore the World with Us</h1>
+            <h1>Explore the DUBAI with Us</h1>
             <p>Unforgettable tours, amazing experiences</p>
             <button class="btn" onclick="openBookingForm()">Book Now</button>
         </div>
@@ -153,3 +153,4 @@
 
 </body>
 </html>
+
