--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             <input type="text" name="name" id="name" placeholder="Enter your full name" required>
             
             <label for="email">Email:</label>
-            <input type="email" name="email" id="email" placeholder="Enter your email" required>
+            <input type="email" name="Email" id="email" placeholder="Enter your email" required>
             
             <label for="phone">Phone Number:</label>
             <input type="tel" name="phone" id="phone" placeholder="Enter your phone number" required>
@@ -153,6 +153,7 @@
 
 </body>
 </html>
+
 
 
 
