--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Saurav Travels</title>
+    <title>Explore Dubai</title>
     <!-- Link CSS -->
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <!-- Header -->
     <header>
-        <img src="images/logo.jpg" alt="Saurav Travels Logo" style="height:100px;">
+        <img src="images/logo.pg" alt="Explore Dubai" style="height:100px;">
         <nav>
             <a href="index.html">Home</a>
             <a href="tours.html">Tours</a>
@@ -69,7 +69,7 @@
 
     <!-- Footer -->
     <footer>
-        &copy; 2025 Saurav Travels | All rights reserved | Email: sauravtravels@example.com
+        &copy; 2025 Explore Dubai Travels | All rights reserved | Email: sauravtravels@example.com
     </footer>
 
     
@@ -153,6 +153,7 @@
 
 </body>
 </html>
+
 
 
 
