--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
     <!-- Hero Section -->
     <section class="hero">
         <div class="hero-text">
+            
+<p data-translate>Please fill out the form to book your package.</p>
+<button id="translateBtn">Translate to Hindi</button>
+
             <h1>Explore the    DUBAI with Us</h1>
             <p>Unforgettable tours, amazing experiences</p>
             <button class="btn" onclick="openBookingForm()">Book Now</button>
@@ -153,6 +157,7 @@
 
 </body>
 </html>
+
 
 
 
