--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <header>
         <img src="images/logo.pg" alt="Explore Dubai" style="height:100px;">
         <nav>
-            <a href="index.html">Home</a>
-            <a href="tours.html">Tours</a>
-            <a href="about.html">About</a>
-            <a href="contact.html">Contact</a>
+            <a href="index.html" data-translate>Home</a>
+            <a href="tours.html" data-translate>Tours</a>
+            <a href="about.html" data-translate>About</a>
+            <a href="contact.html" data-translate>Contact</a>
         </nav>
     </header>
 
@@ -110,7 +110,7 @@
         </div>
     </div>
 
-    <!-- Link JS -->
+    <!-- JS -->
     <script src="js/main.js"></script>
 
 </body>
